fixed landing page thumbnail JS/loading bug

--- a/_preprocess/sass/modules/_tile.scss
+++ b/_preprocess/sass/modules/_tile.scss
@@ -40,4 +40,6 @@
   // @include rem(height, 200px);
   // display: block;
   overflow: hidden;
+  background-size: cover;
+  background-position: center center;
 }
