--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,20 +13,20 @@
       {% capture level %}{{ page.url | append:'index.html' | split:'/' | size }}{% endcapture %}
       {% capture relativepath %}{% for i in (3..level) %}../{% endfor %}{% endcapture %}
       <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-      <link rel="stylesheet" href="{{ site.baseurl }}assets/css/app.css">
+      <link rel="stylesheet" href="{{ relativepath }}{{ site.baseurl }}assets/css/app.css">
       <link href='http://fonts.googleapis.com/css?family=Playfair+Display|Merriweather:300,400,700,700italic,400italic,300italic|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-      <script src="{{ site.baseurl }}assets/js/vendor/modernizr.custom.11128.js"></script>
+      <script src="{{ relativepath }}{{ site.baseurl }}assets/js/vendor/modernizr.custom.11128.js"></script>
   </head>
   <body id="{% if page.slug %}{{ page.slug | downcase }}{% else %}{{ page.title | downcase }}{% endif %}">
     <header role="banner" class="main">
-      <a href="{{ site.baseurl }}" class="main-logo">
-        <img src="{{ site.baseurl }}assets/images/{% if page.title == 'Work' %}logo.png{% else %}logo-dark.png{% endif %}" alt="Andrew Perry" /><!--
+      <a href="{{ relativepath }}{{ site.baseurl }}/" class="main-logo">
+        <img src="{{ relativepath }}{{ site.baseurl }}assets/images/{% if page.title == 'Work' %}logo.png{% else %}logo-dark.png{% endif %}" alt="Andrew Perry" /><!--
       --></a>
       <nav role="navigation" class="global">
         <ul>
-          <li><a href="{{ site.baseurl }}" class="global-item{% if page.url == '/index.html' or page.url contains 'work' %} active{% endif %}">Work</a></li>
-          <li><a href="{{ site.baseurl }}blog.html" class="global-item{% if page.url contains 'blog' %} active{% endif %}">Thinking</a></li>
-          <li><a href="{{ site.baseurl }}about.html" class="global-item{% if page.url contains 'about' %} active{% endif %}">About</a></li>
+          <li><a href="{{ site.baseurl }}/" class="global-item{% if page.url == '/index.html' or page.url contains 'work' %} active{% endif %}">Work</a></li>
+          <li><a href="{{ relativepath }}{{ site.baseurl }}blog.html" class="global-item{% if page.url contains 'blog' %} active{% endif %}">Thinking</a></li>
+          <li><a href="{{ relativepath }}{{ site.baseurl }}about.html" class="global-item{% if page.url contains 'about' %} active{% endif %}">About</a></li>
         </ul>
       </nav>
     </header>
@@ -44,8 +44,8 @@
     </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{ site.baseurl }}assets/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <script src="{{ site.baseurl }}assets/js/app.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ relativepath }}{{ site.baseurl }}assets/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="{{ relativepath }}{{ site.baseurl }}assets/js/app.js"></script>
 
   </body>
 </html>
