--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,10 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
+      {% comment %} calculate the relative path of the current page {% endcomment %}
       {% capture level %}{{ page.url | append:'index.html' | split:'/' | size }}{% endcapture %}
       {% capture relativepath %}{% for i in (3..level) %}../{% endfor %}{% endcapture %}
+
       <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
       <link rel="stylesheet" href="{{ relativepath }}{{ site.baseurl }}assets/css/app.css">
       <link href='http://fonts.googleapis.com/css?family=Playfair+Display|Merriweather:300,400,700,700italic,400italic,300italic|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
